--- a/vercel.json
+++ b/vercel.json
@@ -1,35 +1,14 @@
 {
-    "version": 2,
     "buildCommand": "npm run build",
-    "installCommand": "npm install",
-    "builds": [
+    "outputDirectory": "dist/public",
+    "rewrites": [
         {
-            "src": "api/index.ts",
-            "use": "@vercel/node"
-        },
-        {
-            "src": "package.json",
-            "use": "@vercel/static-build",
-            "config": {
-                "distDir": "dist/public"
-            }
-        }
-    ],
-    "routes": [
-        {
-            "src": "/api/(.*)",
-            "dest": "/api/index.ts"
-        },
-        {
-            "handle": "filesystem"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/index.html"
+            "source": "/api/(.*)",
+            "destination": "/api/index.ts"
         }
     ],
     "functions": {
-        "api/index.ts": {
+        "api/*.ts": {
             "memory": 1024,
             "maxDuration": 10
         }
