Security: Remove real credentials from .env.example, replace with placeholders

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
 # Database
-DATABASE_URL=postgresql://neondb_owner:npg_GV3Yk8HBrpld@ep-soft-sun-ah2kjfzz-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+DATABASE_URL=postgresql://user:password@host/database?sslmode=require
 
 # Session
-SESSION_SECRET=mySecretKey123
+SESSION_SECRET=your-secret-key-here
 
 # Cloudflare
-CLOUDFLARE_ACCOUNT_ID=73f1e9175a176f57897836f2a4599448
-CLOUDFLARE_API_TOKEN=oPtnAje9A1Fm6EHDkztH-7VJ2at7ufXYXsLdvdut
+CLOUDFLARE_ACCOUNT_ID=your-cloudflare-account-id
+CLOUDFLARE_API_TOKEN=your-cloudflare-api-token
 
 # Server
 PORT=5000
