Test plain JavaScript API function - rule out TypeScript compilation issues

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,4 @@
 {
     "buildCommand": "npm run build",
-    "outputDirectory": "dist/public",
-    "rewrites": [
-        {
-            "source": "/api/health",
-            "destination": "/api/health.ts"
-        },
-        {
-            "source": "/api/(.*)",
-            "destination": "/api/index.ts"
-        }
-    ]
+    "outputDirectory": "dist/public"
 }
