--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,23 @@
 {
-    "buildCommand": "npm run build",
-    "outputDirectory": "dist/public"
+    "version": 2,
+    "builds": [
+        {
+            "src": "dist/index.cjs",
+            "use": "@vercel/node"
+        },
+        {
+            "src": "dist/public/**",
+            "use": "@vercel/static"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/api/(.*)",
+            "dest": "/dist/index.cjs"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/dist/public/$1"
+        }
+    ]
 }
